# pokedex

./: Cargo.toml  README.md  database.sqlite
src/: api.rs  cli.rs  domain.rs  main.rs
src/api/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  health.rs
src/cli/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs
src/domain/: create_pokemon.rs  delete_pokemon.rs  entities.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  fetch_pokemons_by_name.rs
src/repositories/: pokemon.rs
