[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.6.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
clap = { version = "4.0.29", features = ["derive"] }
dialoguer = "0.10.2"
rusqlite = "0.28.0"
ureq = { version = "2.5.0", features = ["json"] }